<resources>
    <string name="app_name">Tamagotchi</string>
    <string name="background">background</string>
    <string name="to_home">to Home</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="cthulhu">Cthulhu</string>
    <string name="pet">pet</string>
    <string name="start_counter">0</string>
    <string name="pets">Питомцы</string>
    <string name="notification">Уведомления</string>
    <string name="history">История</string>
    <string name="sound">Звук</string>
    <string name="create_new_pet">Создать питомца</string>
    <string name="change_pet">Сменить питомца</string>
    <string name="change_name">Сменить имя</string>
    <string name="delete_pet">Удаление питомцев</string>
    <string name="back">back</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="name">Name</string>
    <string name="pets_input">Выберите питомца:</string>
    <string name="create_pet">Создание питомца</string>
    <string name="input_name">Введите имя:</string>
    <string name="to_walk">Go walk</string>
    <string name="error_empty_name">Имя не должно быть пустым!</string>
    <string name="error_max_characters">Имя не должно быть длиннее 15 символов</string>
    <string name="error_not_correct_name">Некорректное имя!</string>
    <string name="error_min_characters">Имя не должно быть короче 2 символов</string>
    <string name="sort_on">Сортировка по</string>
    <string name="pet_icon">pet icon</string>
    <string name="level_number">%d lvl</string>
    <string name="this_name"><![CDATA[Текущее имя: <b>%s</b>]]></string>
    <string name="input_new_name">Введите новое имя:</string>
    <string name="change_name_pet">Смена имени питомца</string>
    <string name="delete_this_pets">Вы действительно хотите удалить выбранных питомцев?</string>
    <string name="delete">Удалить</string>
    <string name="lvl_up">lvl_up</string>
    <string name="arrow">arrow indicator</string>

    <plurals name="was_delete_plurals">
        <item quantity="zero">Удалено %d питомцев</item>
        <item quantity="one">Удалено %d питомец</item>
        <item quantity="two">Удалено %d питомца</item>
        <item quantity="few">Удалено %d питомца</item>
        <item quantity="many">Удалено %d питомцев</item>
        <item quantity="other">Удалено %d питомцев</item>
    </plurals>
</resources>
