<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pet_settings"
        android:orderInCategory="101"
        android:title="@string/pets"
        app:showAsAction="never" />

    <item
        android:id="@+id/alarm_settings"
        android:orderInCategory="102"
        android:title="@string/notification"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_history"
        android:orderInCategory="103"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/off_sound"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:orderInCategory="104"
        android:title="@string/sound"
        app:showAsAction="never" />
</menu>
