<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/change_name_pet"
        android:textColor="@color/black"
        android:textSize="@dimen/main_txt_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selectedPetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_margin"
        android:text="@string/this_name"
        android:textColor="@color/black"
        android:textSize="@dimen/main_txt_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indent_margin"
        android:text="@string/input_new_name"
        android:textColor="@color/black"
        android:textSize="@dimen/main_txt_size" />

    <EditText
        android:id="@+id/inputChangeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_margin"
        android:ems="14"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="@dimen/main_txt_size"
        tools:ignore="Autofill" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelChangeName"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/okChangeName"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>