<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutWalk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalkActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_walk"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/image_pet"
        android:layout_width="@dimen/pet_size"
        android:layout_height="@dimen/pet_size"
        android:contentDescription="@string/pet" />

    <ImageButton
        android:id="@+id/button_home"
        android:onClick="goHome"
        android:layout_width="@dimen/home_btn_size"
        android:layout_height="@dimen/home_btn_size"
        android:layout_margin="@dimen/home_button_margin"
        android:layout_gravity="bottom"
        android:background="@drawable/home"
        android:contentDescription="@string/to_home" />
</FrameLayout>
