<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/android_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/main_margin"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="@dimen/title_hello_main"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/main_margin"
        android:onClick="onButtonClick"
        android:text="@string/hello" />

    <Button
        android:id="@+id/button_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:onClick="onButtonClick"
        android:text="@string/cat" />

    <Button
        android:id="@+id/button_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_cat"
        android:layout_margin="@dimen/main_margin"
        android:layout_toStartOf="@id/button_cat"
        android:onClick="onButtonClick"
        android:text="@string/dog" />

    <Button
        android:id="@+id/button_cthulhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_cat"
        android:layout_margin="@dimen/main_margin"
        android:layout_toEndOf="@id/button_cat"
        android:onClick="onButtonClick"
        android:text="@string/cthulhu" />
</RelativeLayout>
