<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/change_footer_image"
        android:layout_below="@+id/change_header_image"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/tv03" />

    <ImageView
        android:id="@+id/change_header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/tv01" />

    <TextView
        android:id="@+id/change_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_header_image"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:text="@string/pets_input"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/layoutChangePet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_header"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_on"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/changeSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:entries="@array/sort" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/change_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/change_footer_image"
        android:layout_below="@+id/layoutChangePet"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp" />

    <ImageView
        android:id="@+id/change_footer_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/tv02" />

    <ImageButton
        android:id="@+id/toBackFromWalk"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back"
        android:onClick="goBack" />
</RelativeLayout>